# testcase-rust-solidity-react

./: README.md
backend-rust/: Cargo.toml
contracts-solidity/: Collection.sol  CollectionFactory.sol
frontend-react/: package-lock.json  package.json
frontend-react/public/: index.html
frontend-react/src/: App.js  ContractConfig.js
watcher-eth/src/: main.rs
