[package]
name = "tide-basic-crud"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.18", features = ["full"] }

ethers = { version = "1.0.0", features = ["abigen", "rustls", "ws"] }
eyre = "0.6"

tide = "0.13.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
